--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,11 @@ spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.pool-name=MyHikariCP
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
+
+
+
+# Format LocalDateTime, LocalDate, LocalTime in JSON responses
+spring.jackson.date-format=yyyy-MM-dd hh:mm a
+spring.jackson.time-zone=Asia/Kolkata
+spring.jackson.serialization.write-dates-as-timestamps=false
+
